<resources>
    <string name="gs_sure">OK</string>
    <string name="gs_sure_1">OK</string>
    <string name="gs_join_reconnecting">Loading…</string>
    <string name="gs_i_known">OK</string>
    <string name="gs_exit_webcast">Do you want to exit the webcast?</string>
    <string name="gs_end_webcast">Do you want to END the webcast?</string>
    <string name="gs_cancel">Cancel</string>
    <string name="gs_net_disconnect">Network error. Please check your network connection.</string>
    <string name="gs_exit_tip">exit program</string>
    <string name="gs_net_have_disconnect">Network disconnected...</string>
    <string name="gs_net_have_disconnect_tip">Network disconnected.</string>
    <string name="gs_net_connecting">Connecting to server. Please wait...</string>
    <string name="gs_join_panelist">Sorry, but you may not join webcast as a panelist in this app. Please re-enter as an ordinary attendee.</string>
    <string name="gs_domain_error">Please check the domain name.</string>
    <string name="gs_error_data_timeout">Data expired</string>
    <string name="gs_error_service">Incorrect service</string>
    <string name="gs_error_param">Incorrect param</string>
    <string name="gs_error_number_unexist">Inexistent ID</string>
    <string name="gs_error_token">Wrong password</string>
    <string name="gs_error_login">Wrong username or password</string>
    <string name="gs_error_role">Role Required</string>
    <string name="gs_error_fail_webcast">Invalid ID</string>
    <string name="gs_error_webcast_unstart">Not started</string>
    <string name="gs_error_isonly_web">Support web only</string>
    <string name="gs_error_room_unenable">Invalid ID</string>
    <string name="gs_error_owner_error">Internal Problem</string>
    <string name="gs_error_invalid_address">Invalid ID</string>
    <string name="gs_error_room_overdue">Overdue</string>
    <string name="gs_error_authourization_not_enough">Not enough authority</string>
    <string name="gs_error_untimely">The activity has not started yet.</string>
    <string name="gs_error_unsupport_mobile">Do not support mobile</string>
    <string name="gs_xlistview_header_hint_normal">Pull to refresh</string>
    <string name="gs_xlistview_header_hint_ready">Release to load data</string>
    <string name="gs_xlistview_header_hint_loading">Loading...</string>
    <string name="gs_xlistview_header_last_time">Latest update：</string>
    <string name="gs_xlistview_footer_hint_normal">More</string>
    <string name="gs_xlistview_footer_hint_ready">Release to load more</string>
    <string name="gs_chat_send">Send</string>
    <string name="gs_chat_sys">System info</string>
    <string name="gs_chat_to">&amp;gt;</string>
    <string name="gs_chat_me">Me</string>
    <string name="gs_chat_say">:</string>
    <string name="gs_chat_unenable">All silenced</string>
    <string name="gs_chat_only_me">只看我的聊天</string>
    <string name="gs_chat_quickly">Too frequent message submission. Please try later.</string>
    <string name="gs_chat_publicchat_open">Chat enabled</string>
    <string name="gs_chat_publicchat_close">Chat disabled</string>
    <string name="gs_chat_mode_only_pub">Public chat only</string>
    <string name="gs_chat_mode_only_private">Private chat only</string>
    <string name="chat_private_tip">您收到一条%s的私聊消息</string>
    <string name="chat_bottom_private_tip">您收到%s的私聊消息</string>
    <string name="chat_only_me">只看我的聊天</string>
    <string name="chat_public_disable">当前禁止聊天，您的消息发送失败</string>
    <string name="qa_reply_tip">%s回答了你的提问</string>
    <string name="qa_wen">问</string>
    <string name="qa_reply">回答</string>
    <string name="qa_unenable">禁止提问</string>
    <string name="qa_enable">允许提问</string>
    <string name="qa_replying">回复中</string>
    <string name="qa_voice_reply">[已加入语音回复列表]</string>
    <string name="qa_voice_replying">[语音回复中]</string>
    <string name="qa_voice_replied">[语音已回复]</string>
    <string name="qa_only_me">只看我的问答</string>
    <string name="chat_to_user_tip">正在和%s私聊</string>
    <string name="gs_leave_err_eject_tip">You are removed from the activity.</string>
    <string name="gs_leave_err_close_tip">Activity over. Thank you!</string>
    <string name="gs_leave_err_ip_deny">Your IP is banned.</string>
    <string name="gs_leave_other_place_login">您的账号已在其他地方登录</string>
    <string name="gs_leave_unknow_reason">您已退出直播</string>
    <string name="gs_leave_webcast_err_timeup">The activity is overdue. Click \'OK\' to exit.</string>
    <string name="gs_join_webcast_err_param">This webpage may be overdue or the activity is over.Please return to the join page to input the password.</string>
    <string name="gs_join_webcast_err_codec">You cannot access, because the specified audio coding doesn\'t match this activity.</string>
    <string name="gs_join_webcast_err_host">Sorry, this role is taken and you cannot join.</string>
    <string name="gs_join_webcast_err_license">There are too many people in the activity. Please try to join later.</string>
    <string name="gs_join_webcast_err_locked">You cannot access as the activity is locked.</string>
    <string name="gs_join_webcast_err_ip">You cannot access because your IP is banned.</string>
    <string name="gs_join_webcast_err_third_auth">Third-party authentication failure</string>
    <string name="gs_join_webcast_err_too_early">Activity has not started yet. Please join later.</string>
    <string name="gs_join_webcast_timeout">Timeout</string>
    <string name="gs_cast_status_ing">Live</string>
    <string name="gs_cast_status_pause">Paused</string>
    <string name="gs_cast_status_notstart">Not Started</string>
    <string name="gs_cast_status_end">Over</string>
    <string name="gs_net_3g">Your device is consuming data flow and will incur fees. Do you want to continue?</string>
    <string name="gs_net_2g">Your device is consuming data flow and will incur fees. Do you want to continue?</string>
    <string name="gs_net_4g">Your device is consuming data flow and will incur fees. Do you want to continue?</string>
    <string name="gs_net_x_g_host">Your device is consuming data flow and will incur fees. Do you want to continue?</string>
    <string name="gs_net_no_network">No network available</string>
    <string name="gs_exit">Exit</string>
    <string name="gs_end">End</string>
    <string name="gs_continues">Continue</string>
    <string name="gs_diagnosis_end">Bug report sent</string>
    <string name="gs_diagnosis_ing">Sending bug report</string>
    <string name="gs_diagnosis_fail">Failed to send bug report</string>
    <string name="gs_reminder_open_mic">Do you want to turn on your microphone?</string>
    <string name="gs_accept_mic_open">open</string>
    <string name="gs_accept_mic_refuse">refuse</string>
    <string name="gs_reminder_open_mic_normal">邀请您加入语音互动</string>
    <string name="gs_reminder_open_camera_normal">邀请您加入视频互动</string>
    <string name="gs_idc_title">Network path</string>
    <string name="gs_idc_no_data">No network available</string>
    <string name="gs_no_video">No video</string>
    <string name="gs_audio_closed">Audio off</string>
    <string name="gs_audio_opened">Audio on</string>
    <string name="gs_mic_hang_up">Off</string>
    <string name="gs_mic_open">Your microphone is on </string>
    <string name="mute_volume">静音</string>
    <string name="gs_start_live">Start</string>
    <string name="gs_live_pause">Webcast paused</string>
    <string name="gs_live_resume">Webcast restored</string>
    <string name="gs_lod_is_on">Playing cast record now. Please end it to make sure the app work normally.</string>
    <string name="gs_as_is_on_msg">Sharing desktop now and cannot publish your video temporarily.</string>
    <string name="gs_package_no_camera_perssmion">Cannot access camera. Please allow in settings of your device.</string>
    <string name="gs_user_disable_chat">Disable chat</string>
    <string name="gs_user_enable_chat">Enable chat</string>
    <string name="gs_user_eject">Kick out</string>
    <string name="gs_chat_host_join">(Admin)is in</string>
    <string name="gs_chat_host_leave">(Admin)is out</string>
    <string name="gs_chat_is_disable_to_chat">is disabled to chat</string>
    <string name="gs_chat_is_alowed_to_chat">is allowed to chat</string>
    <string name="gs_chat_is_kicked_out">is removed from the room by admin</string>
    <string name="gs_chat_activity_start">activity starts</string>
    <string name="gs_disable_somebody_chat">Do you want to mute him/her?</string>
    <string name="gs_remove_somebody">Do you want to remove him/her?</string>
    <string name="gs_chat_forbid">抱歉，你已被组织者禁言</string>
    <string name="gs_as_other_begin">The live video will be interrupted if you end desktop sharing. Do you want to end?</string>
    <string name="gs_as_is_on">Sharing desktop now...</string>
    <string name="gs_as_video_active">The live video is restoring</string>
    <string name="gs_role_panelist_training">「 助教 」</string>
    <string name="gs_role_panelist_webcast">「 嘉宾 」</string>
    <string name="gs_role_normal_user">「 普通参加者 」</string>
    <string name="gs_tip_board">打赏榜单</string>
    <string name="gs_tip_total">合计：</string>
    <string name="gs_tip_total_empty">亲，还没人给你打赏呦~加油!</string>
    <string name="gs_tip_tiped">打赏了一个红包</string>
    <string name="gs_tip_server_fail">数据提交失败，请重试</string>
    <string name="gs_sponsor_Saying">「分君身上暖，感恩心缱绻」</string>
    <string name="gs_sponsor_encouragement">还没有人赞赏，快来当第一个赞赏人吧</string>
    <string name="gs_sponsor_alipay">支付宝支付</string>
    <string name="gs_sponsor_custom_sum">自定义金额</string>
    <string name="gs_reward_text">reward</string>
    <string name="lottery_going">Lucky draw time!</string>
    <string name="lottery_name_list">Draw attendees</string>
    <string name="lottery_pause">Draw banned</string>
    <string name="lottery_pause_tip">Oops, the lucky draw is banned.</string>
    <string name="rollcall_going">Roll call</string>
    <string name="rollcall_finish">Roll call is over.</string>
    <string name="rollcall_roll">OK</string>
    <string name="rollcall_finish_tip">The roll call is over.</string>
    <string name="vote_commit">Send</string>
    <string name="vote_force_tip">此问卷不能跳过哦，请努力完成吧</string>
    <string name="vote_count_failure">Keep trying!</string>
    <string name="vote_count_success">You have passed. Well done!</string>
    <string name="vote_count_good">Excellent!</string>
    <string name="vote_question_single">Single-choice</string>
    <string name="vote_question_multi">Multi-choice</string>
    <string name="single_choice">[Single-choice]</string>
    <string name="multi_choice">[Multi-choice]</string>
    <string name="text_choice">[Q&amp;A]</string>
    <string name="vote_please_dawan">Please answer the questions and submit</string>
    <string name="vote_please_dawan_all">There are still questions not answered.</string>
    <string name="vote_comment_failure">Failed to submit the questionnaire.</string>
    <string name="vote_text_join_count">Attendees：%s</string>
    <string name="card_expand_tip">Quiz</string>
    <string name="card_publish_tip">The quiz content is demonstrated in the files or by the presenter in audio.</string>
    <string name="card_attent_count">%s in total</string>
    <string name="card_page_publish_btn">Send and close</string>
    <string name="card_result_publish_teach">Correct:</string>
    <string name="card_result_publish_my">Mine:</string>
    <string name="card_result_success">You have passed. Well done!</string>
    <string name="doc_no_publish_doc">Click the document icon to upload document~</string>
    <string name="doc_no_watch_doc">No document~</string>
    <string name="qa_no">Experts will answer questions for you</string>
    <string name="gs_close_video">关闭视频</string>
    <string name="diagnosis">Bug report</string>
    <string name="switch_net">Network path</string>
</resources>